# backend/base/controllers/employee_controller.py
@@ -2,6 +2,7 @@ import connexion
 import six
 
 from base.models.employee import Employee  # noqa: E501
+from base.models.employee_post_request_body import EmployeePostRequestBody  # noqa: E501
 from base import util
 
 
@@ -26,4 +27,19 @@ def get_employees():  # noqa: E501
 
     :rtype: List[Employee]
     """
+    return 'do some magic!'
+
+
+def post_employees(employee_post_request_body=None):  # noqa: E501
+    """post_employees
+
+    create a new employee # noqa: E501
+
+    :param employee_post_request_body: 
+    :type employee_post_request_body: dict | bytes
+
+    :rtype: Employee
+    """
+    if connexion.request.is_json:
+        employee_post_request_body = EmployeePostRequestBody.from_dict(connexion.request.get_json())  # noqa: E501
     return 'do some magic!'
