# backend/base/models/__init__.py
@@ -5,3 +5,4 @@ from __future__ import absolute_import
 # import models into model package
 from base.models.basic_response import BasicResponse
 from base.models.employee import Employee
+from base.models.employee_post_request_body import EmployeePostRequestBody
